force-app/main/default/objects/chttrunfollow__UnfollowBatchJobsQueue__c/chttrunfollow__UnfollowBatchJobsQueue__c.object-meta.xml
<CustomObject>
    <description>EDIT AT YOUR OWN RISK.  

This object is meant to handle the 5 concurrent batch apex jobs limit in Apex.  Each time the rules are queued up to run, each different object such as Opportunity or Case takes up one job from the limit.  If you have 6 objects, one won&apos;t be able to run at the same time as the others.

This queue stores the unrun job, and tries to schedule it at a later time, after the other jobs have finished.

This is not meant to ever be seen by users and should not be changed at risk of breaking the application.</description>
    <label>Chatter Unfollow Batch Job Queued</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Chatter Record Unfollow Batch Jobs Queue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chatter Unfollow Batch Jobs Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>