force-app/main/default/objects/chttrunfollow__UnfollowBatchJobsQueue__c/fields/chttrunfollow__delayRulesIncluded__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__delayRulesIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a job to queue up rules with daysDelay &gt; 0?</description>
    <label>delayRulesIncluded</label>
    <type>Checkbox</type>
</CustomField>