force-app/main/default/objects/chttrunfollow__UnfollowBatchJobsQueue__c/fields/chttrunfollow__evalateEachRecordForDaysDelay__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__evalateEachRecordForDaysDelay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines whether there are 2 or more individual DaysDelay values for the rules in this job. If only 1 day, then recordId&apos;s will all get the same DaysDelay value in the queue.  If more than 1, each record needs to be evaluated to see which DaysDelay value it should receive.</description>
    <label>evalateEachRecordForDaysDelay</label>
    <type>Checkbox</type>
</CustomField>