force-app/main/default/objects/chttrunfollow__UnfollowBatchJobsQueue__c/fields/chttrunfollow__sObjectQuery__c.field-meta.xml
<CustomField>
    <fullName>chttrunfollow__sObjectQuery__c</fullName>
    <description>This stores the SOQL for records to be unfollowed.</description>
    <label>sObjectQuery</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>